@@ -1,3 +1,10 @@
+2012-09-10  Guillaume Lazzara  <z@lrde.epita.fr>
+
+	Use io::magick for sauvola binaries output.
+
+	* src/binarization/sauvola.cc,
+	* src/binarization/sauvola_ms.cc: Here.
+
 2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>
 
 	* tests/unit_test/unit-tests.mk: Regen.
